[package]
name = "map_gen"
version = "0.1.0"
edition = "2018"

[dependencies]
bencher = "0.1.5"
noise = {git="https://github.com/Razaekel/noise-rs.git", branch="rayon"}
rand = "0.8.3"
uuid = {version = "0.8", features = ["serde", "v4"]}
image = "0.23.14"
rayon = "1.5.0"
chrono = "0.4"

[lib]
crate-type = ["cdylib"]